--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 flask==2.3.2
-flask-sqlalchemy==2.5.1
+flask-sqlalchemy
 sqlalchemy>=2.0.0
 pymysql==1.1.1
 werkzeug==3.0.6
 faker
+redis
 
-- $env:FLASK_APP = "run_app.py"
-- python -m flask sync-to-redis
+
